# gsmm_compiler_maxent_sampling

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  DEVELOPMENT_STATUS.md  GSMM_Compiler_MaxEnt_Sampling_Implementation_Spec.md  LICENSE  README.md  pyproject.toml
.collab/: codex-m102e.txt
.collab/specs/: collab-outcome.md  m102e-round2.md  m102e-threads.md  m112-span-and-session.md  m113-reachability-dual-witness.md  m114-census-plan.md  m115-dimension-scaled-schedule.md  m7-review.md  m7-round2.md  m7-round3.md
benchmarks/: M11_4_CENSUS.md  M11_5_CENSUS.md  M11_5_SCHEDULE_TAU.md  M9_REPORT.md  analyze_census.py  analyze_tau.py  bifido_benchmark.json  biomass_activity.py  biomass_distribution.py  census_diag.py  census_m115.py  covariance_study_d145.py  plot_census.py  schedule_sweep.py  sj_seed_replication.py  worker_sweep.json
examples/: toy_config.toml  toy_network.json
manifests/: build_manifest.py
models/: GCF_000010425_1_ASM1042v1_protein_non_gapfilled_latest_gapfilled_noO2.json
src/gsmm_compiler/: __init__.py  affine_geometry.py  batch.py  benchmark.py  cache.py  calibration.py  cli.py  config.py  diagnostics.py  features.py  flux_polytope.py  highs_backend.py  line_distribution.py  line_geometry.py  logging_utils.py  maxent_sampler.py  model_input.py  native_csc.py  numerics.py  output.py  provenance.py  reweighting.py  rounding.py  schedule.py  sparse_objective.py
tests/: conftest.py
tests/integration/: test_m0_platform.py  test_m1_elimination_equivalence.py  test_m3_lp_layer.py  test_m4_geometry.py  test_m5_sampler.py  test_m6_positive_beta.py  test_m7_reweighted.py  test_m8_batch.py
tests/performance/: test_m9_benchmark.py  test_m9_invariants.py
tests/statistical/: ks.py  test_line_targets.py  test_tilted_targets.py  test_uniform_targets.py
tests/unit/: test_affine_geometry.py  test_batch.py  test_cache.py  test_calibration.py  test_cli.py  test_config.py  test_diagnostics.py  test_features.py  test_flux_polytope.py  test_highs_backend.py  test_line_distribution.py  test_line_geometry.py  test_m10_2_dag_identity.py  test_m10_2b_pilot_cache.py  test_m10_2d_model_cache.py  test_m10_2e_determinism.py  test_m11_0_solver_identity.py  test_maxent_sampler.py  test_model_input.py  test_native_csc.py  test_no_scipy.py  test_output.py  test_provenance.py  test_reachable_certificate.py  test_reweighting.py  test_rounding.py  test_schedule.py  test_sparse_objective.py
